[package]
name = "pinkyoshi"
version = "0.1.0"
authors = ["smbdy"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"  # Ensure this version matches across all dependencies
pollster = "0.3"
wgpu_glyph = { version = "0.15", features = ["wgpu-0_12"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "pinkyoshi"
path = "src/main.rs"